--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!-- saved from url=(0057)file:///C:/Users/DELL/OneDrive/Documents/ASHES_pitch.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width", initial-scale=1.0">
+    <meta name="robots" content="noindex,nofollow">
     <title>ASHES™ - Where Failure Becomes Fuel</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;700&display=swap');
